[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Circulo.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enimies/Boss/Corpo2.gd" type="Script" id=2]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=4]

[node name="Corpo2" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.647, 0 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 1 )

[node name="Timer_mov_body" type="Timer" parent="."]

[node name="Timer_parar_body" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer_start" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4
[connection signal="timeout" from="Timer_mov_body" to="." method="_on_Timer_mov_body_timeout"]
[connection signal="timeout" from="Timer_parar_body" to="." method="_on_Timer_parar_body_timeout"]
[connection signal="timeout" from="Timer_start" to="." method="_on_Timer_start_timeout"]
